--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<!-- <h1>{{ page.date | date_to_string }} - {{ page.title }}</h1> -->
 
 <div class="post">
   {{ content }}
